# vocab

./: .gitignore  .pre-commit-config.yaml  README.md  parse_yandex_list.py  pyproject.toml  references.md
code/: gui.py  parse_yandex_list.py  word_list.py
sandbox/: parse_yandex_list.py  playground.py
source/: app_gui.py  gui.py  main.py  word_list.py
source/xtras/: check.py  parse_yandex_list.py  verb_aspect.py
src/: app_gui.py  main.py  parsers_utils.py  timer.py  word_list.py
word_lists/: check.txt  rt_learn_rus.txt  sputnik_words.txt
word_lists/parsed_word_lists/: combined_wd_list.txt  test.txt  test1.txt
